src/test/ui/error-codes/E0075.stderr
error[E0075]: SIMD vector cannot be empty
  --> $DIR/E0075.rs:14:1
   |
LL | struct Bad; //~ ERROR E0075
   | ^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0075"
